--- a/app/src/main/res/layout/fragment_instagram.xml
+++ b/app/src/main/res/layout/fragment_instagram.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="layout.InstagramFragment">
+    tools:context=".InstagramFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <WebView
